cmake: use GNUInstallDirs to obtain lib/lib64 path
Fixes lp:1679795

https://bugs.launchpad.net/kicad/+bug/1679795

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ endif()
 
 project( kicad )
 
+include( GNUInstallDirs )
+
 cmake_minimum_required( VERSION 2.8.12 FATAL_ERROR )
 # because of http://public.kitware.com/Bug/view.php?id=10395
 
@@ -364,13 +366,13 @@ if( NOT APPLE )
         set( KICAD_USER_PLUGIN ${KICAD_BIN}/plugins
             CACHE PATH "Location of KiCad user-loaded plugins" )
     else()
-        set( KICAD_PLUGINS lib/kicad/plugins
+        set( KICAD_PLUGINS ${CMAKE_INSTALL_LIBDIR}/kicad/plugins
             CACHE PATH "Location of KiCad plugins." )
 
-        set( KICAD_LIB lib
+        set( KICAD_LIB ${CMAKE_INSTALL_LIBDIR}
             CACHE PATH "Location of KiCad shared objects" )
 
-        set( KICAD_USER_PLUGIN lib/kicad/plugins
+        set( KICAD_USER_PLUGIN ${CMAKE_INSTALL_LIBDIR}/kicad/plugins
             CACHE PATH "Location of KiCad user-loaded plugins" )
     endif()
 
