Cmakelists: remove no longer used boost libraries from required boost components lists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -548,11 +548,8 @@ find_package( Cairo 1.8.8 REQUIRED )
 find_package( Pixman 0.30 REQUIRED )
 
 #
-# Find Boost library, required.
-#
-# Note: Prior to Boost 1.59, the Boost context library is not built when compiling on windows
-#       with GCC.  You must patch the Boost sources.
-find_package( Boost 1.54.0 REQUIRED COMPONENTS system )
+# Find Boost headers, required.
+find_package( Boost 1.54.0 REQUIRED )
 
 # Include MinGW resource compiler.
 include( MinGWResourceCompiler )
