--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -380,6 +380,8 @@ set( PCB_COMMON_SRCS
     ../pcbnew/class_zone.cpp
     ../pcbnew/class_zone_settings.cpp
     ../pcbnew/classpcb.cpp
+    ../pcbnew/connectivity.cpp
+    ../pcbnew/connectivity_algo.cpp
     ../pcbnew/convert_drawsegment_list_to_polygon.cpp
     ../pcbnew/ratsnest_data.cpp
     ../pcbnew/ratsnest_viewitem.cpp
