--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -400,6 +400,7 @@ set( PCB_COMMON_SRCS
     ../pcbnew/kicad_plugin.cpp
     ../pcbnew/gpcb_plugin.cpp
     ../pcbnew/pcb_netlist.cpp
+    widgets/widget_net_selector.cpp
     pcb_plot_params_keywords.cpp
     pcb_keywords.cpp
     ../pcbnew/pcb_parser.cpp
