Add a new color selector, to adjust color selection for GAL mode, with support of opacity (alpha channel) Pcbnew: save opacity value in color config, and keep it when switching between legacy and gal mode.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -166,6 +166,8 @@ set( COMMON_DLG_SRCS
 
 set( COMMON_WIDGET_SRCS
     widgets/color_swatch.cpp
+    widgets/color4Dpickerdlg_base.cpp
+    widgets/color4Dpickerdlg.cpp
     widgets/gal_options_panel.cpp
     widgets/mathplot.cpp
     widgets/widget_hotkey_list.cpp
