Disabled the automatic schematic-cross probing due to performance reasons. Added sheet-context menu entry for the cross-probing instead.

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -469,6 +469,7 @@ set( BMAPS_MID
     select_grid
     select_layer_pair
     select_w_layer
+    select_same_sheet
     shape_3d
     sheetset
     simulator
