delete library upgrade icon and make two new icons for the archive footprint menu in pcbnew

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -307,7 +307,8 @@ set( BMAPS_MID
     lib_next
     lib_previous
     library_browse
-    library_update
+    library_archive
+    library_archive_as
     library
     library_table
     lines90
