--- a/eeschema/CMakeLists.txt
+++ b/eeschema/CMakeLists.txt
@@ -70,6 +70,8 @@ set( EESCHEMA_DLGS
     dialogs/dialog_sch_sheet_props_base.cpp
     dialogs/dialog_schematic_find.cpp
     dialogs/dialog_schematic_find_base.cpp
+    dialogs/dialog_sym_lib_table.cpp
+    dialogs/dialog_sym_lib_table_base.cpp
     dialogs/dialog_symbol_remap.cpp
     dialogs/dialog_symbol_remap_base.cpp
     dialogs/dialog_global_sym_lib_table_config.cpp
