Add Gerber job file writer in Pcbnew, and a basic reader in Gerbview. Currently disabled Fix also very minor issues in Gerbview

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -238,6 +238,7 @@ set( BMAPS_MID
     gbr_select_mode1
     gbr_select_mode2
     gerber_file
+    gerber_job_file
     gerbview_show_negative_objects
     gerbview_drill_file
     gerbview_clear_layers
