Hash functions for BOARD_ITEMs

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -252,6 +252,7 @@ set( COMMON_SRCS
     filter_reader.cpp
     footprint_info.cpp
     footprint_filter.cpp
+    hash_eda.cpp
     lib_id.cpp
     lib_table_keywords.cpp
 #    findkicadhelppath.cpp.notused      deprecated, use searchhelpfilefullpath.cpp
