Show/Hide icons in menus (according to Icons option) in GAL, like in Legacy mode. Cosmetic enhancement in Gerbview context menu.

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -260,6 +260,7 @@ set( BMAPS_MID
     help
     hidden_pin
     hierarchy_nav
+    highlight_remove
     hotkeys
     hotkeys_import
     hotkeys_export
