Add a dialog to edit/change components LIB_ID inside a schematic. This is useful for instance after moving a symbol from a lib to an other lib.

--- a/eeschema/CMakeLists.txt
+++ b/eeschema/CMakeLists.txt
@@ -42,6 +42,8 @@ set( EESCHEMA_DLGS
     dialogs/dialog_edit_line_style.cpp
     dialogs/dialog_edit_line_style_base.cpp
     dialogs/dialog_edit_one_field.cpp
+    dialogs/dialog_edit_components_libid.cpp
+    dialogs/dialog_edit_components_libid_base.cpp
     dialogs/dialog_eeschema_options_base.cpp
     dialogs/dialog_eeschema_options.cpp
     dialogs/dialog_erc.cpp
