About dialog fixes.
Remove developer email addresses as requested on the developers mailing
list.

Update source contributor list.

Add place holders for symbol and footprint library contributors.

Remove unnecessary wxT() macros.

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -209,6 +209,7 @@ set( BMAPS_MID
     drc
     duplicate
     edges_sketch
+    edit_component
     edit_comp_footprint
     edit_comp_ref
     edit_comp_value
