Fix overbar display in OpenGL canvas
Moved the code handling text overbars to a single function
(ProcessOverbars()) to replace similar pieces of code trying to do the
same thing.

Fixes: lp:1735906
* https://bugs.launchpad.net/kicad/+bug/1735906

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -289,6 +289,7 @@ set( COMMON_SRCS
     selcolor.cpp
     settings.cpp
     systemdirsappend.cpp
+    text_utils.cpp
     trigo.cpp
     utf8.cpp
     validators.cpp
