Implement primitive icon scaling for high DPI
This is meant as a stopgap for 5.0, with plans to add proper scaled
icons in the 6.0 cycle. A function KiScaledBitmap() is added, which
works like KiBitmap() except it scales the bitmap according to the
calling window's font size. Controls have been added to all the main
applications to let the user select scaling manually (these were omitted
from smaller apps that didn't already have a place to put them).

In addition, in eeschema only, the pixel height of the system font is
shown in the options dialog for diagnostics. This is only for collecting
feedback before 5.0 release from users with different displays and will
be removed.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -182,6 +182,7 @@ set( COMMON_WIDGET_SRCS
     widgets/two_column_tree_list.cpp
     widgets/unit_binder.cpp
     widgets/widget_hotkey_list.cpp
+    widgets/stepped_slider.cpp
     )
 
 set( COMMON_PAGE_LAYOUT_SRCS
