--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,8 @@ Documentation/development/doxygen
 *.pyc
 common/pcb_plot_params_keywords.cpp
 include/pcb_plot_params_lexer.h
-pcbnew/specctra_keywords.cpp
-pcbnew/specctra_lexer.h
+pcbnew/specctra_import_export/specctra_keywords.cpp
+pcbnew/specctra_import_export/specctra_lexer.h
 pcb_calculator/pcb_calculator_datafile_keywords.cpp
 pcb_calculator/pcb_calculator_datafile_lexer.h
 new/html
